# ztdl

./: Cargo.toml  README.md
src/: main.rs
src/dl/: mod.rs  test.rs
src/dl/ch02/: logic.rs
src/dl/ch03/: activate.rs  mod.rs  threenet.rs
src/dl/ch04/: diff.rs  loss.rs  mod.rs
