[package]
name = "ztdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["blocking"]}
tokio = {version = "1.21.1", features = ["full"]}
eyre = "0.6.8"
actix-web = "4.2.1"
ndarray = "0.15.6"